--- a/src/components/WebsiteInfo.css
+++ b/src/components/WebsiteInfo.css
@@ -37,5 +37,5 @@
     color: white;
     background-color: #009879;
     border-radius: 15px;
-    box-shadow: 0 0 20px 10px rgba(0,0,0,0.35);
+    box-shadow: 0 0 20px 10px rgba(0,0,0,0.3);
 }
